# 2D-multiplayer-shooter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  compile.sh
include/: Application.h  BoxCollider.h  Camera.h  CircleCollider.h  Collider.h  Input.h  Multiplayer.h  MyTime.h  Object.h  Renderer.h  SDLHandler.h  Scene.h  Texture.h  Transform.h
include/Component/: BaseRenderer.h  Camera.h  Component.h  Rigidbody.h  Sprite.h  SpriteRenderer.h  TextRenderer.h  Transform.h
include/Component/Collider/: BoxCollider.h  CircleCollider.h  Collider.h  PolygonCollider.h
include/Component/Custom/: Bullet.h  CameraFollow.h  CameraMover.h  CameraResizer.h  PlayerMovement.h  ShapeSpawner.h  Tank.h  TankController.h
include/Component/Renderer/: BaseRenderer.h  Button.h  InputField.h  ParticleSystem.h  SpriteRenderer.h  TextRenderer.h
include/Core/: Assets.h  FPSCounter.h  Input.h  MyTime.h  Physics.h  Renderer.h  SDLHandler.h
include/Core/Physics/: Collision.h  Physics.h  Solver.h
include/Custom/: Bullet.h  CameraFollow.h  CameraResizer.h  MapManager.h  Multiplayer.h  PlayerManager.h  ScoreDisplayer.h  ShapeSpawner.h  Singleton.h  Tank.h  TankController.h  TankEffects.h  TankPlayerController.h  TankRemoteController.h  Wall.h  WallCreator.h
include/Custom/Example/: EBullet.h  ECameraFollow.h  ECameraResizer.h  EShapeSpawner.h  ETank.h  ETankController.h  EWall.h  ExampleScenes.h
include/Multiplayer/: Client.h  MessageQueue.h  Server.h  net_modules.h
include/Object/: Camera.h  GameObject.h  GameObject.ipp  Graphical.h  Object.h  Sprite.h  Transform.h
include/Other/: DOTween.h  DOVirtual.h  Gizmos.h  Material.h  Texture.h  Tweener.h
include/Utils/: Action.h  Color.h  Concepts.h  Debug.h  Math.h  MyMath.h  SDLUtils.h  Utils.h  VectorDelayed.h
libs/SDL2_image/: CMakeLists.txt  SDL_image.h
src/: Application.cpp  BoxCollider.cpp  Camera.cpp  CircleCollider.cpp  Collider.cpp  Input.cpp  Multiplayer.cpp  Object.cpp  Renderer.cpp  SDLHandler.cpp  Scene.cpp  Texture.cpp  Transform.cpp  main.cpp
src/Component/: BaseRenderer.cpp  Camera.cpp  Component.cpp  Rigidbody.cpp  Sprite.cpp  SpriteRenderer.cpp  TextRenderer.cpp  Transform.cpp
src/Component/Collider/: BoxCollider.cpp  CircleCollider.cpp  Collider.cpp  PolygonCollider.cpp
src/Component/Custom/: Bullet.cpp  CameraFollow.cpp  CameraMover.cpp  CameraResizer.cpp  PlayerMovement.cpp  ShapeSpawner.cpp  Tank.cpp  TankController.cpp  Wall.cpp
src/Component/Renderer/: BaseRenderer.cpp  Button.cpp  InputField.cpp  ParticleSystem.cpp  SpriteRenderer.cpp  TextRenderer.cpp
src/Core/: Assets.cpp  Input.cpp  MyTime.cpp  Physics.cpp  Renderer.cpp  SDLHandler.cpp
src/Core/Physics/: Physics.cpp  Solver.cpp
src/Custom/: Bullet.cpp  CameraFollow.cpp  CameraResizer.cpp  MapManager.cpp  Multiplayer.cpp  PlayerManager.cpp  ScoreDisplayer.cpp  ShapeSpawner.cpp  Tank.cpp  TankController.cpp  TankEffects.cpp  TankPlayerController.cpp  TankRemoteController.cpp  Wall.cpp  WallCreator.cpp
src/Custom/Example/: EBullet.cpp  ECameraFollow.cpp  ECameraResizer.cpp  EShapeSpawner.cpp  ETank.cpp  ETankController.cpp  EWall.cpp  ExampleScenes.cpp
src/Multiplayer/: Client.cpp  MessageQueue.cpp  Server.cpp  net_modules.cpp
src/Object/: Camera.cpp  GameObject.cpp  Graphical.cpp  Object.cpp  Sprite.cpp  Transform.cpp
src/Other/: DOTween.cpp  DOVirtual.cpp  Gizmos.cpp  Material.cpp  Texture.cpp  Tweener.cpp
src/Utils/: Color.cpp  Math.cpp  MyMath.cpp  Utils.cpp
